tinha esquecido de enviar o commit da pasta da api

--- a/atividade06/api/.env
+++ b/atividade06/api/.env
@@ -1,2 +1,2 @@
-MONGO_DATABASE_CONNECT_URL="mongodb://root:docker@mongodb-primary:27017,mongodb-arbiter:27017,mongodb-secondary:27017/weba?replicaSet=rs0&authSource=admin"
+MONGO_DATABASE_CONNECT_URL=mongodb://user:docker@localhost:27017/weba
 PORT=4000
