--- a/atividade06/api/package.json
+++ b/atividade06/api/package.json
@@ -9,9 +9,12 @@
     "build": "tsc"
   },
   "dependencies": {
+    "@types/http-errors": "^1.8.1",
+    "@types/statuses": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "mongoose": "^6.1.1"
   },
   "devDependencies": {
